--- a/scss/layouts/_group418.scss
+++ b/scss/layouts/_group418.scss
@@ -3,19 +3,18 @@
 .Group418_container{
     padding-bottom: 60px;
     background-color:  #f5f5f5;
-    
 }
 .Group418{
 max-width: 1440px;
 height: 1006px;
-background-image: url("./assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
+background-image: url("/assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
 background-repeat: no-repeat;
 background-position: right bottom;
 background-size: contain;
   @media screen and (min-width:768px) {
 max-width: 1236px;
 height: 906px;
-background-image: url("./assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
+background-image: url("/assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
 background-repeat: no-repeat;
 background-position: right bottom;
 background-size: contain;
@@ -28,7 +27,7 @@ background-size: contain;
    {
    width: 1440px;
     height: 806px;
-    background-image: url("./assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
+    background-image: url("/assets/img/bernard-hermant-KqOLr8OiQLU-unsplash\ 1.avif");
     background-repeat: no-repeat;
     background-position: right bottom;
    background-color:  #f5f5f5;
