--- a/css/main.css
+++ b/css/main.css
@@ -1025,7 +1025,7 @@ img {
 }
 
 .Group415_item-title {
-  max-width: 265px;
+  max-width: 285px;
   margin-left: 24px;
   margin-top: 24px;
   font-family: "Poppins", sans-serif;
@@ -1037,7 +1037,7 @@ img {
 }
 
 .Group415_item-text {
-  max-width: 328px;
+  max-width: 290px;
   margin-left: 24px;
   margin-top: 16px;
   font-family: "Poppins", sans-serif;
@@ -1050,6 +1050,8 @@ img {
 
 .Group415_item-wrap {
   display: flex;
+  gap: 14px;
+  align-items: center;
   margin-top: 24px;
   margin-left: 24px;
 }
