--- a/scss/layouts/_group415.scss
+++ b/scss/layouts/_group415.scss
@@ -64,7 +64,7 @@ height: 380px;
     margin-left: 24px;
 }
 .Group415_item-title {
-    max-width: 265px;
+    max-width: 285px;
     margin-left: 24px;
     margin-top: 24px;
     font-family: $font-family;
@@ -75,10 +75,10 @@ letter-spacing: 0em;
 color: $tittle;
 }
 .Group415_item-text {
-    max-width: 328px;
-    margin-left: 24px;
-    margin-top: 16px;
-    font-family: $font-family;
+max-width: 290px;
+margin-left: 24px;
+margin-top: 16px;
+font-family: $font-family;
 font-weight: 400;
 font-size: 16px;
 line-height: 150%;
@@ -87,6 +87,8 @@ color: $tittle;
 }
 .Group415_item-wrap {
     display: flex;
+    gap:14px ;
+    align-items: center;
     margin-top: 24px;
     margin-left: 24px;
 }
