--- a/scss/layouts/_group415.scss
+++ b/scss/layouts/_group415.scss
@@ -20,6 +20,7 @@ background: #f8f9fe;
     justify-content: space-between;
 }
 .Group415_title {
+    margin-top: 16px;
 font-family: $font3;
 font-weight: 600;
 font-size: 48px;
