--- a/css/main.css
+++ b/css/main.css
@@ -1122,6 +1122,7 @@ img {
   justify-content: space-between;
   align-items: center;
   align-items: flex-start;
+  padding-top: 80px;
 }
 
 .footer_text {
@@ -1154,6 +1155,7 @@ img {
   line-height: 163%;
   letter-spacing: 0.03em;
   color: #d7d7d7;
+  margin-bottom: 100px;
 }
 
 .button {
