--- a/css/main.css
+++ b/css/main.css
@@ -1088,18 +1088,40 @@ img {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.footer_wrap:nth-child(2) {
-  margin-left: 214px;
+@media screen and (min-width: 1240px) {
+  .footer_wrap:nth-child(2) {
+    margin-left: 214px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer_wrap:nth-child(2) {
+    margin-left: 114px;
+  }
 }
 
-.footer_wrap:nth-child(3) {
-  margin-left: 80px;
+@media screen and (min-width: 1240px) {
+  .footer_wrap:nth-child(3) {
+    margin-left: 80px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer_wrap:nth-child(3) {
+    margin-left: 54px;
+  }
 }
 
-.footer_wrap:nth-child(4) {
-  margin-left: 137px;
+@media screen and (min-width: 1240px) {
+  .footer_wrap:nth-child(4) {
+    margin-left: 137px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer_wrap:nth-child(4) {
+    margin-left: 84px;
+  }
 }
 
 .footer_link {
@@ -1215,4 +1237,10 @@ img {
   margin-top: 24px;
   color: #0b2e29;
   margin-bottom: 16px;
+  align-items: flex-start;
+}
+
+.form {
+  display: flex;
+  gap: auto;
 }/*# sourceMappingURL=main.css.map */
