--- a/scss/layouts/_group368.scss
+++ b/scss/layouts/_group368.scss
@@ -20,6 +20,10 @@
   padding: 12px 24px;
   background: #f8f9fe;
   text-transform: uppercase;
+  @media screen and (max-width: 1080px) {
+      display: block;
+       text-align: center;
+  }
   
 }
 .Group368_title {
@@ -29,8 +33,9 @@
   line-height: 117%;
   letter-spacing: 0.01em;
   color: #054457;
-  max-width: 280px;
+
   @media screen and (min-width: 480px) {
+    margin-top: 32px;
     font-family: $font3;
     font-weight: 600;
     font-size: 48px;
@@ -67,25 +72,35 @@
 }
 .Group368_list {
   display: flex;
-  
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 24px;
   @mixin dekstop {
 flex-direction: column;
   }
-  @media screen and (min-width: 480px) {
+    @media screen and (min-width: 1240px) {
     margin-top: 48px;
-    align-items: center;
     justify-content: space-between;
+    
   }
+ 
 }
+
+
 .Group368_item {
+  
   max-width: 376px;
  max-height:472px ; 
   border: 1px solid #dedcda;
   background: #fefeff;
   padding: 16px;
-  align-items: center;
+   margin-top: 32px;
+  @media screen and (max-width: 480px) {
+    
+     text-align: center;
+  }
+ 
+  
 }
 .Group368_item-img {
   width: 244px;
@@ -115,9 +130,11 @@ flex-direction: column;
 }
 .Group368_item-cont {
   display: flex;
-  justify-content: center;
+  
   @media screen and (max-width: 480px) {
     flex-direction: column;
+    justify-content: center;
+
   }
 
   @media screen and (min-width: 480px) {
@@ -144,10 +161,15 @@ flex-direction: column;
   width: 159px;
   height: 32px;
   background: #f5f5f5;
+  
 
-  text-align: center;
+  
   @media screen and (min-width: 480px) {
     margin-left: 32px;
+  }
+  @media screen and (max-width: 480px) {
+    margin-left: 42px;
+    text-align: center;
   }
 }
 .Group368_item-span {
@@ -166,13 +188,20 @@ flex-direction: column;
   color: #69b99d;
   border: 1px solid #69b99d;
   padding: 12px 48px;
-  max-width: 246px;
+  width: 156px;
   max-height: 48px;
   margin-top: 24px;
   text-align: center;
   @media screen and (min-width: 480px) {
-    width: 346px;
+    width: 240px;
   }
+  &:hover{
+    background: #69b99d;
+    color: white;
+    cursor: pointer;
+
+  }
+
 }
 .Group368_item-link2 {
   display: inline-block;
@@ -181,20 +210,30 @@ flex-direction: column;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0em;
-  color: #fefeff;
+  color: #69b99d;
+  border: 1px solid #69b99d;
   padding: 12px 48px;
-  max-width: 246px;
+  width: 156px;
   max-height: 48px;
   margin-top: 24px;
-  box-shadow: 0 0 20px 0 rgba(105, 185, 157, 0.58);
-  background: #69b99d;
   text-align: center;
   @media screen and (min-width: 480px) {
-    width: 346px;
+    width: 240px;
+  }
+  &:hover{
+    background: #69b99d;
+    color: white;
+    cursor: pointer;
+
   }
 }
 .discover__wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 32px;
+      @media screen and (max-width:480px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
