--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .Group418_container {
-  padding-bottom: 60px;
+  padding-top: 60px;
   background-color: #f5f5f5;
 }
 
@@ -86,6 +86,12 @@
   text-transform: uppercase;
   background-color: #fff;
   padding: 12px 24px;
+}
+@media screen and (max-width: 1080px) {
+  .Group418_text-link {
+    display: block;
+    text-align: center;
+  }
 }
 
 .Group418_buy {
@@ -455,6 +461,12 @@ img {
   background: #f8f9fe;
   text-transform: uppercase;
 }
+@media screen and (max-width: 1080px) {
+  .Group368_link1 {
+    display: block;
+    text-align: center;
+  }
+}
 
 .Group368_title {
   font-family: "Rubik", sans-serif;
@@ -463,10 +475,10 @@ img {
   line-height: 117%;
   letter-spacing: 0.01em;
   color: #054457;
-  max-width: 280px;
 }
 @media screen and (min-width: 480px) {
   .Group368_title {
+    margin-top: 32px;
     font-family: "Rubik", sans-serif;
     font-weight: 600;
     font-size: 48px;
@@ -507,13 +519,13 @@ img {
 
 .Group368_list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 24px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1240px) {
   .Group368_list {
     margin-top: 48px;
-    align-items: center;
     justify-content: space-between;
   }
 }
@@ -524,7 +536,12 @@ img {
   border: 1px solid #dedcda;
   background: #fefeff;
   padding: 16px;
-  align-items: center;
+  margin-top: 32px;
+}
+@media screen and (max-width: 480px) {
+  .Group368_item {
+    text-align: center;
+  }
 }
 
 .Group368_item-img {
@@ -560,11 +577,11 @@ img {
 
 .Group368_item-cont {
   display: flex;
-  justify-content: center;
 }
 @media screen and (max-width: 480px) {
   .Group368_item-cont {
     flex-direction: column;
+    justify-content: center;
   }
 }
 @media screen and (min-width: 480px) {
@@ -594,11 +611,16 @@ img {
   width: 159px;
   height: 32px;
   background: #f5f5f5;
-  text-align: center;
 }
 @media screen and (min-width: 480px) {
   .Group368_item-text2 {
     margin-left: 32px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .Group368_item-text2 {
+    margin-left: 42px;
+    text-align: center;
   }
 }
 
@@ -620,15 +642,20 @@ img {
   color: #69b99d;
   border: 1px solid #69b99d;
   padding: 12px 48px;
-  max-width: 246px;
+  width: 156px;
   max-height: 48px;
   margin-top: 24px;
   text-align: center;
 }
 @media screen and (min-width: 480px) {
   .Group368_item-link {
-    width: 346px;
+    width: 240px;
   }
+}
+.Group368_item-link:hover {
+  background: #69b99d;
+  color: white;
+  cursor: pointer;
 }
 
 .Group368_item-link2 {
@@ -638,25 +665,36 @@ img {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0em;
-  color: #fefeff;
+  color: #69b99d;
+  border: 1px solid #69b99d;
   padding: 12px 48px;
-  max-width: 246px;
+  width: 156px;
   max-height: 48px;
   margin-top: 24px;
-  box-shadow: 0 0 20px 0 rgba(105, 185, 157, 0.58);
-  background: #69b99d;
   text-align: center;
 }
 @media screen and (min-width: 480px) {
   .Group368_item-link2 {
-    width: 346px;
+    width: 240px;
   }
+}
+.Group368_item-link2:hover {
+  background: #69b99d;
+  color: white;
+  cursor: pointer;
 }
 
 .discover__wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 32px;
+}
+@media screen and (max-width: 480px) {
+  .discover__wrap {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .Group416 {
@@ -677,6 +715,12 @@ img {
   background: #f8f9fe;
   text-transform: uppercase;
 }
+@media screen and (max-width: 1080px) {
+  .Group416_link {
+    display: block;
+    text-align: center;
+  }
+}
 
 .Group416_title {
   text-align: center;
@@ -689,6 +733,11 @@ img {
   letter-spacing: 0.01em;
   color: #054457;
   max-width: 436px;
+}
+@media screen and (max-width: 480px) {
+  .Group416_title {
+    font-size: 32px;
+  }
 }
 @media screen and (min-width: 1240px) {
   .Group416_title {
@@ -773,6 +822,12 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .Group365_thumb {
+    max-width: 134px;
+    max-height: 180px;
+  }
 }
 
 .Group365_titel {
@@ -901,11 +956,14 @@ img {
   letter-spacing: 0.03em;
   color: #69b99d;
   padding: 12px 24px;
+  text-transform: uppercase;
   background: #f8f9fe;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1080px) {
   .Group365_link {
     margin-top: 32px;
+    display: block;
+    text-align: center;
   }
 }
 
@@ -917,6 +975,11 @@ img {
   letter-spacing: 0.01em;
   color: #054457;
   margin-top: 16px;
+}
+@media screen and (max-width: 480px) {
+  .Group365_div-titel {
+    font-size: 32px;
+  }
 }
 
 .Group365_text5 {
@@ -946,6 +1009,18 @@ img {
   background: #fefeff;
   color: #69b99d;
 }
+@media screen and (max-width: 1240px) {
+  .Group365_link2 {
+    width: 90%;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .Group365_link2 {
+    max-width: 70%;
+    text-align: center;
+  }
+}
 
 @media screen and (min-width: 480px) {
   .right_side {
@@ -969,10 +1044,23 @@ img {
   padding: 12px 24px;
   background: #f8f9fe;
 }
+@media screen and (max-width: 1080px) {
+  .Group415_text1 {
+    display: block;
+    text-align: center;
+  }
+}
 
 .Learn_wrap {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .Learn_wrap {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .Group415_title {
@@ -984,6 +1072,11 @@ img {
   letter-spacing: 0.01em;
   text-align: center;
   color: #054457;
+}
+@media screen and (max-width: 480px) {
+  .Group415_title {
+    font-size: 32px;
+  }
 }
 
 .Group415_link1 {
@@ -1021,14 +1114,14 @@ img {
 }
 
 .Group415_item-img {
-  margin-top: 24px;
-  margin-left: 24px;
+  padding-top: 24px;
+  padding-left: 24px;
 }
 
 .Group415_item-title {
   max-width: 285px;
-  margin-left: 24px;
-  margin-top: 24px;
+  padding-left: 24px;
+  padding-top: 24px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 18px;
@@ -1039,8 +1132,8 @@ img {
 
 .Group415_item-text {
   max-width: 290px;
-  margin-left: 24px;
-  margin-top: 16px;
+  padding-left: 24px;
+  padding-top: 16px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -1053,8 +1146,8 @@ img {
   display: flex;
   gap: 14px;
   align-items: center;
-  margin-top: 24px;
-  margin-left: 24px;
+  padding-top: 24px;
+  padding-left: 24px;
 }
 
 .Group415_item-wrap1 {
