--- a/scss/layouts/_group365.scss
+++ b/scss/layouts/_group365.scss
@@ -21,6 +21,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media screen and (max-width:480px) {
+     max-width: 134px;
+  max-height: 180px;
+  }
 }
 .Group365_titel {
   font-family: $font-family;
@@ -132,12 +136,15 @@
   letter-spacing: 0.03em;
   color: #69b99d;
   padding: 12px 24px;
-
+  text-transform: uppercase;
   background: #f8f9fe;
-   @media screen and (max-width:480px) {
+   @media screen and (max-width:1080px) {
      margin-top: 32px;
-      
+      display: block;
+       text-align: center;
+  
     }
+   
 }
 .Group365_div-titel {
   font-family: $font3;
@@ -147,6 +154,9 @@
   letter-spacing: 0.01em;
   color: #054457;
   margin-top: 16px;
+    @media screen and (max-width:480px) {
+    font-size: 32px;
+  }
 }
 
 .Group365_text5 {
@@ -176,6 +186,14 @@
     background: #fefeff;
     color: #69b99d;
   }
+   @media  screen and (max-width:1240px){
+      width: 90%;
+      text-align: center;
+    }
+     @media  screen and (max-width:1000px){
+      max-width: 70%;
+      text-align: center;
+    }
 }
 .right_side{
   @media screen and (min-width:480px) {
