--- a/scss/layouts/_group415.scss
+++ b/scss/layouts/_group415.scss
@@ -14,10 +14,19 @@ letter-spacing: 0.03em;
 color: #69b99d;
 padding: 12px 24px;
 background: #f8f9fe;
+@media screen and (max-width: 1080px) {
+      display: block;
+       text-align: center;
+  }
 }
 .Learn_wrap {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+      @media screen and (max-width:480px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 .Group415_title {
     margin-top: 16px;
@@ -28,6 +37,9 @@ line-height: 117%;
 letter-spacing: 0.01em;
 text-align: center;
 color: #054457;
+  @media screen and (max-width:480px) {
+    font-size: 32px;
+  }
 }
 .Group415_link1 {
     display: flex;
@@ -61,13 +73,13 @@ height: 380px;
     
 }
 .Group415_item-img {
-    margin-top: 24px;
-    margin-left: 24px;
+    padding-top: 24px;
+    padding-left: 24px;
 }
 .Group415_item-title {
     max-width: 285px;
-    margin-left: 24px;
-    margin-top: 24px;
+    padding-left: 24px;
+    padding-top: 24px;
     font-family: $font-family;
 font-weight: 600;
 font-size: 18px;
@@ -77,8 +89,8 @@ color: $tittle;
 }
 .Group415_item-text {
 max-width: 290px;
-margin-left: 24px;
-margin-top: 16px;
+padding-left: 24px;
+padding-top: 16px;
 font-family: $font-family;
 font-weight: 400;
 font-size: 16px;
@@ -90,8 +102,8 @@ color: $tittle;
     display: flex;
     gap:14px ;
     align-items: center;
-    margin-top: 24px;
-    margin-left: 24px;
+    padding-top: 24px;
+    padding-left: 24px;
 }
 .Group415_item-wrap1 {
     flex-direction: column;
