--- a/scss/layouts/_group416.scss
+++ b/scss/layouts/_group416.scss
@@ -17,6 +17,10 @@
   padding: 12px 24px;
   background: #f8f9fe;
   text-transform: uppercase;
+  @media screen and (max-width: 1080px) {
+      display: block;
+       text-align: center;
+  }
 }
 .Group416_title {
   text-align: center;
@@ -29,7 +33,9 @@
   letter-spacing: 0.01em;
   color: #054457;
   max-width: 436px;
-
+  @media screen and (max-width:480px) {
+    font-size: 32px;
+  }
   @include dekstop {
     text-align: left;
     margin: 0;
